--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /myapp
-    destination: /var/www/html
+    destination: /var/www/html/app
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
