--- a/appspec.yml
+++ b/appspec.yml
@@ -2,11 +2,17 @@
 version: 0.0
 os: linux
 files:
-  - source: /myapp
-    destination: /home/ubuntu/helloworld/
+  - source: /index.html
+    destination: /var/www/html/
 hooks:
-  AferInstall:
+  BeforeInstall:
     - location: scripts/install_dependencies
       timeout: 300
       runas: root
-  
+    - location: scripts/start_server
+      timeout: 300
+      runas: root
+  ApplicationStop:
+    - location: scripts/stop_server
+      timeout: 300
+      runas: root
