--- a/appspec.yml
+++ b/appspec.yml
@@ -2,5 +2,5 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
-    destination: /var/www/html/
+  - source: /myapp
+    destination: /home/ubuntu/helloworld/
